--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "daisyui": "^2.51.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
