--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 NEXT_PUBLIC_API_URL=
 NEXTAUTH_URL=
 DATABASE_URL=
-GITHUB_ID=
-GITHUB_SECRET=
+GITHUB_ID_DEV=
+GITHUB_SECRET_DEV=
+GITHUB_ID_PROD=
+GITHUB_SECRET_PROD=
