--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "faunadb": "^4.8.0",
-    "next": "12.3.1",
-    "next-auth": "4.14.0",
+    "next": "13.1.6",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
