--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "faunadb": "^4.8.0",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
+    "nextjs-progressbar": "^0.0.16",
     "prisma": "^4.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
