--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "npx prettier --write ."
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^3.9.1",
@@ -29,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
     "typescript": "4.9.5",
     "yup": "^1.0.2"
   },
