--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
+    "cookie": "^0.5.0",
     "daisyui": "^2.51.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
@@ -34,6 +35,7 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
