--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
+    "react-timeago": "^7.1.0",
     "typescript": "4.9.5",
     "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/cookie": "^0.5.1",
+    "@types/react-timeago": "^4.1.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
