--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "faunadb": "^4.8.0",
     "next": "12.2.5",
     "next-auth": "^4.19.2",
+    "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
     "prisma": "^4.11.0",
     "react": "18.2.0",
