--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "faunadb": "^4.8.0",
-    "next": "12.2.5",
+    "next": "^14.2.4",
     "next-auth": "^4.19.2",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
