--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^3.9.1",
     "@types/node": "18.14.1",
-    "@types/react": "18.0.28",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "cookie": "^0.5.0",
