Modify format rules

--- a/.prettierrc
+++ b/.prettierrc
@@ -11,8 +11,8 @@
   "proseWrap": "preserve",
   "quoteProps": "as-needed",
   "requirePragma": false,
-  "semi": false,
-  "singleQuote": true,
+  "semi": true,
+  "singleQuote": false,
   "tabWidth": 2,
   "trailingComma": "none",
   "useTabs": false,
