--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,7 @@
   "htmlWhitespaceSensitivity": "css",
   "insertPragma": false,
   "jsxSingleQuote": false,
+  "plugins": ["prettier-plugin-tailwindcss"],
   "printWidth": 80,
   "proseWrap": "preserve",
   "quoteProps": "as-needed",
