--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/react-timeago": "^4.1.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.2.7"
   }
 }
