--- a/.github/workflows/website-check.yaml
+++ b/.github/workflows/website-check.yaml
@@ -7,24 +7,24 @@ on:
     branches: [main]
 
 jobs:
-  builds_and_checks:
-    runs_on: ubuntu-latest
+  website_check:
+    runs-on: ubuntu-latest
 
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        - node-version: 20.x
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
           cache: "npm"
 
-    - name: Install Dependencies
-      run: npm ci
+      - name: Install Dependencies
+        run: npm ci
 
-    - name: Run lint
-      run: npm run lint
+      - name: Run lint
+        run: npm run lint
 
-    - name: Run format check
-      run: npx prettier --check .
+      - name: Run format check
+        run: npx prettier --check .
