--- a/.github/workflows/website-check.yaml
+++ b/.github/workflows/website-check.yaml
@@ -20,11 +20,19 @@ jobs:
           node-version: 20.x
           cache: "npm"
 
+      - name: Cache Dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-${{ github.event.pull_request.number }}-
+
       - name: Install Dependencies
         run: npm ci
 
-      - name: Run lint
+      - name: Lint
         run: npm run lint
 
-      - name: Run format check
+      - name: Format
         run: npx prettier --check .
