--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^3.9.1",
+    "@prisma/client": "^6.16.3",
     "@types/node": "18.14.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "18.0.11",
@@ -27,7 +27,7 @@
     "next-auth": "^4.19.2",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
-    "prisma": "^4.11.0",
+    "prisma": "^6.16.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
@@ -35,7 +35,7 @@
     "react-query": "^3.39.3",
     "react-timeago": "^7.1.0",
     "tailwind-scrollbar": "^3.0.0",
-    "typescript": "4.9.5",
+    "typescript": "^5.9.2",
     "yup": "^1.0.2"
   },
   "devDependencies": {
